--- a/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
@@ -47,7 +47,7 @@
 		<div>
 			<div>
 				<p>
-					<b>@check.User.VisibleName</b> заполнил@(check.User.Gender.ChooseEnding()) тест «@checkModel.ContextSlideTitle»
+					<b>@check.User.VisibleName</b> заполнил@(check.User.Gender.ChooseEnding()) тест «@checkModel.ContextSlideTitle.MakeNestedQuotes()»
 				</p>
 			</div>
 			<div>
