--- a/src/uLearn.Web/Content/modals.css
+++ b/src/uLearn.Web/Content/modals.css
@@ -3,6 +3,10 @@
 	margin-top: 0;
 }
 
+.modal-body .tab-pane.fade.active {
+	opacity: 1;
+}
+
 .modal-title {
 	display: inline-block;
 	font-size: 18px;
