--- a/src/uLearn.Web/Views/Account/Profile.cshtml
+++ b/src/uLearn.Web/Views/Account/Profile.cshtml
@@ -72,7 +72,7 @@
 	</div>
 	
 	<div class="user-profile__courses">
-		<h2>Курсы</h2>
+		<h2>Статистика по&nbsp;курсам</h2>
 		@if (Model.UserCourses.Count == 0)
 		{
 			<p class="help-block">Нет курсов</p>
