Build exercise zips on request only on web application

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -9,6 +9,7 @@
 @{
 	ViewBag.Title = string.Format("{0}: {1}", Model.CourseTitle, Model.Slide.Title);
 	ViewBag.Slide = Model.Slide;
+	ViewBag.CourseId = Model.CourseId;
 
 	var mainDivClass = "";
 }
