--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			@Html.ActionLink("uLearn", "Index", "Home", null, new { @class = "navbar-brand" })
+			@Html.ActionLink("Ulearn", "Index", "Home", null, new { @class = "navbar-brand" })
 			<ul class="notifications__mobile-nav nav navbar-nav pull-right visible-xs">
 				@if (User.Identity.IsAuthenticated)
 				{
