--- a/src/uLearn.Web/Views/Shared/_Footer.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Footer.cshtml
@@ -6,7 +6,8 @@
 		<p>
 			Ulearn сделан в&nbsp;СКБ Контур. Если вам нравится программировать, приходите к&nbsp;нам <a href="https://kontur.ru/voidmain?utm_source=ulearn&utm_medium=footer">работать</a>.
 		</p>
-		<p>@Html.ActionLink("Условия использования", "Terms", "Home") платформы. С&nbsp;вопросами и пожеланиями пишите на&nbsp;<a href="mailto:support@ulearn.me">support@ulearn.me</a>.
-		</p>
+        <p>
+            @Html.ActionLink("Условия использования", "Terms", "Home") платформы. С&nbsp;вопросами и пожеланиями пишите на&nbsp;<a href="mailto:support@ulearn.me">support@ulearn.me</a>.
+        </p>
 	</div>
 </footer>
