Add link to profile from comments
(fix bug: it has been showed not always)

--- a/src/uLearn.Web/Views/Comments/SlideComments.cshtml
+++ b/src/uLearn.Web/Views/Comments/SlideComments.cshtml
@@ -27,6 +27,7 @@
 			CanEditAndDeleteComment = Model.CanModerateComments || isAuthor,
 			CanViewAuthorSubmissions = slide is ExerciseSlide && Model.CanViewAuthorSubmissions,
 			CurrentUser = Model.CurrentUser,
+			CanViewAuthorProfile = Model.CanViewAuthorProfiles,
 		};
 	}
 
