--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -2180,7 +2180,7 @@ h1 .copy-group-link {
 	font-weight: 400;
 }
 
-ourse-statistics thead .student-name {
+.course-statistics thead .student-name {
 	cursor: pointer;	
 }
 
