--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -18,7 +18,18 @@
 		</div>
 	}
 
-	@using (Html.BeginForm("UploadCourse", "Admin", new { Model.CourseId }, FormMethod.Post, new { enctype = "multipart/form-data", style = "margin-bottom: 10px" }))
+    @if (! string.IsNullOrEmpty(Model.Error))
+    {
+	    <div class="course-loading-error">
+            <p class="text-danger">
+                <b>Ошибка в&nbsp;архиве:</b> @Model.Error
+            </p>
+            <p class="text-muted">
+                Если вы не&nbsp;понимаете, почему произошла эта ошибка, напишите нам на&nbsp;<a href="mailto:support@ulearn.me">support@ulearn.me</a>.
+            </p>
+        </div>
+    }
+    @using (Html.BeginForm("UploadCourse", "Admin", new { Model.CourseId }, FormMethod.Post, new { enctype = "multipart/form-data", style = "margin-bottom: 10px" }))
 	{
 		<input type="file" data-filename-placement="inside" class="btn" name="file"/>
 		<input type="submit" class="btn btn-success" value="Загрузить пакет"/>
