Fix Ulearn.Web views
Remove unused usings

--- a/src/uLearn.Web/Views/Admin/Certificates.cshtml
+++ b/src/uLearn.Web/Views/Admin/Certificates.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Database.Extensions
 @using Database.Models
 @using Microsoft.AspNet.Identity
-@using uLearn
 @using uLearn.Web.Extensions
-@using uLearn.Extensions
+@using Ulearn.Common
+@using Ulearn.Common.Extensions
 
 @model uLearn.Web.Controllers.CertificatesViewModel
 
