--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Database.Extensions
 @using Database.Models
-@using uLearn
-@using uLearn.Extensions
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Shared
+@using Ulearn.Common
+@using Ulearn.Common.Extensions
 
 @model uLearn.Web.Controllers.GroupsViewModel
 
