--- a/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Database.Models
 @using RestSharp.Extensions
-@using uLearn
-@using uLearn.Extensions
 @using uLearn.Web.Extensions
+@using Ulearn.Common
+@using Ulearn.Common.Extensions
 
 @model uLearn.Web.Controllers.ManualCheckingQueueViewModel
 
