--- a/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
@@ -1,6 +1,5 @@
-﻿@using uLearn
-@using uLearn.Extensions
-
+﻿@using Ulearn.Common
+@using Ulearn.Common.Extensions
 @model uLearn.Web.Controllers.ManualCheckingQueueViewModel
 
 @{
