--- a/src/uLearn.Web/Views/Admin/PreviewCertificates.cshtml
+++ b/src/uLearn.Web/Views/Admin/PreviewCertificates.cshtml
@@ -1,5 +1,4 @@
-﻿@using ApprovalUtilities.Utilities
-@model uLearn.Web.Controllers.PreviewCertificatesViewModel
+﻿@model uLearn.Web.Controllers.PreviewCertificatesViewModel
 
 @{
 	ViewBag.Title = "Предпросмотр сертификатов " + Model.Template.Name;
