--- a/src/uLearn.Web/Views/Admin/_GroupMember.cshtml
+++ b/src/uLearn.Web/Views/Admin/_GroupMember.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Database.Extensions
 @using Database.Models
-@using uLearn
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Shared
+@using Ulearn.Common
 
 @model Database.Models.GroupMember
 
