--- a/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
@@ -1,11 +1,9 @@
-﻿@using System
-@using System.Collections.Generic
-@using System.Linq
+﻿@using System.Linq
 @using Database.Extensions
 @using Database.Models
-@using uLearn
-@using uLearn.Extensions
 @using uLearn.Web.Extensions
+@using Ulearn.Common
+@using Ulearn.Common.Extensions
 @model CourseStatisticPageModel
 
 @functions {
