--- a/src/uLearn.Web/Views/Analytics/UserSolutions.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UserSolutions.cshtml
@@ -1,5 +1,4 @@
-﻿@using uLearn.Model.Blocks
-@model uLearn.Web.Controllers.UserSolutionsViewModel
+﻿@model uLearn.Web.Controllers.UserSolutionsViewModel
 
 @{
 	ViewBag.Title = "Решения " + Model.User.VisibleName + "(" + Model.User.UserName + ")";
