--- a/src/uLearn.Web/Views/Analytics/UsersProgress.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UsersProgress.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Globalization
 @using uLearn
-@using uLearn.Extensions
 @using uLearn.Quizes
+@using Ulearn.Common.Extensions
 @model uLearn.Web.Controllers.UserProgressViewModel
 
 <table class="tablesorter">
