--- a/src/uLearn.Web/Views/Certificates/List.cshtml
+++ b/src/uLearn.Web/Views/Certificates/List.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-@using uLearn.Extensions
+@using Ulearn.Common.Extensions
 
 @model uLearn.Web.Controllers.UserCertificatesViewModel
 
