--- a/src/uLearn.Web/Views/Comments/SlideComments.cshtml
+++ b/src/uLearn.Web/Views/Comments/SlideComments.cshtml
@@ -2,9 +2,9 @@
 @using Database.Models
 @using Microsoft.AspNet.Identity
 @using uLearn
-@using uLearn.Extensions
 @using uLearn.Web.Controllers
 @using uLearn.Web.Views.Shared
+@using Ulearn.Common.Extensions
 
 @model SlideCommentsModel
 
