--- a/src/uLearn.Web/Views/Comments/_Comment.cshtml
+++ b/src/uLearn.Web/Views/Comments/_Comment.cshtml
@@ -1,5 +1,4 @@
-﻿@using Database.Extensions
-@using Database.Models
+﻿@using Database.Models
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Shared
 @model CommentViewModel
