--- a/src/uLearn.Web/Views/Comments/_CommentText.cshtml
+++ b/src/uLearn.Web/Views/Comments/_CommentText.cshtml
@@ -1,6 +1,5 @@
-﻿@using uLearn
-@using uLearn.Extensions
-@using uLearn.Web.Extensions
+﻿@using uLearn.Web.Extensions
+@using Ulearn.Common.Extensions
 @model Database.Models.Comment
 
 @{
