--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Database.Extensions
 @using Database.Models
-@using uLearn.Extensions
 @using uLearn.Web.Controllers
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Course
+@using Ulearn.Common.Extensions
 
 @model ExerciseBlockData
 
