--- a/src/uLearn.Web/Views/Exercise/_ExerciseReview.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseReview.cshtml
@@ -1,9 +1,8 @@
 ﻿@using Database.Models
 @using Database.Extensions
 @using Microsoft.AspNet.Identity
-@using uLearn
-@using uLearn.Extensions
 @using uLearn.Web.Extensions
+@using Ulearn.Common.Extensions
 @model ExerciseCodeReviewModel
 
 <div class="exercise__review"
