--- a/src/uLearn.Web/Views/Login/ExternalLoginConfirmation.cshtml
+++ b/src/uLearn.Web/Views/Login/ExternalLoginConfirmation.cshtml
@@ -1,5 +1,5 @@
-﻿@using uLearn
-@using uLearn.Web.Extensions
+﻿@using uLearn.Web.Extensions
+@using Ulearn.Common
 @model ExternalLoginConfirmationViewModel
 @{
 	ViewBag.Title = "Регистрация";
