--- a/src/uLearn.Web/Views/Notifications/Settings.cshtml
+++ b/src/uLearn.Web/Views/Notifications/Settings.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Database.Extensions
 @using Database.Models
-@using uLearn.Extensions
 @using uLearn.Web.Extensions
+@using Ulearn.Common.Extensions
 
 @model uLearn.Web.Controllers.NotificationSettingsViewModel
 
