--- a/src/uLearn.Web/Views/Quiz/Analytics.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Analytics.cshtml
@@ -1,6 +1,6 @@
-﻿@using uLearn.Extensions
-@using uLearn.Model.Blocks
+﻿@using uLearn.Model.Blocks
 @using uLearn.Quizes
+@using Ulearn.Common.Extensions
 @model QuizAnalyticsModel
 
 @functions {
