--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -1,7 +1,7 @@
-﻿@using uLearn.Extensions
-@using uLearn.Quizes
+﻿@using uLearn.Quizes
 @using uLearn.Web.Controllers
 @using uLearn.Web.Views.Course
+@using Ulearn.Common.Extensions
 
 @model QuizModel
 @{
