--- a/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Database.Models
-@using uLearn.Extensions
+@using Ulearn.Common.Extensions
 @model UserListModel
 
 @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "AntiForgeryTokenContainer" }))
