--- a/src/uLearn.Web/Views/Stepik/UpdateOptions.cshtml
+++ b/src/uLearn.Web/Views/Stepik/UpdateOptions.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Linq
 @using Stepik.Api
-@using uLearn.Extensions
+@using Ulearn.Common.Extensions
 
 @model uLearn.Web.Controllers.UpdateOptionsModel
 
