--- a/src/uLearn.Web/Views/Account/Register.cshtml
+++ b/src/uLearn.Web/Views/Account/Register.cshtml
@@ -1,5 +1,5 @@
-﻿@using uLearn
-@using uLearn.Web.Extensions
+﻿@using uLearn.Web.Extensions
+@using Ulearn.Common
 @model RegisterViewModel
 @{
 	ViewBag.Title = "Регистрация";
