--- a/src/uLearn.Web/Views/Admin/Diagnostics.cshtml
+++ b/src/uLearn.Web/Views/Admin/Diagnostics.cshtml
@@ -1,5 +1,5 @@
-﻿@using uLearn.Extensions
-@using uLearn.Web.Controllers
+﻿@using uLearn.Web.Controllers
+@using Ulearn.Common.Extensions
 
 @model DiagnosticsModel
 
@@ -8,7 +8,7 @@
 }
 
 <div class="container">
-	@if (Model.IsVersionPublished)
+    @if (Model.IsVersionPublished)
 	{
 		<h1>Курс обновлён, @Html.RouteLink("перейти к курсу →", "Course", new { courseId = Model.CourseId, action = "Slide" }, new { })</h1>
 
