--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -1,8 +1,9 @@
 ﻿@using Database.Models
 @using uLearn
-@using uLearn.Extensions
 @using uLearn.Quizes
 @using uLearn.Web.Extensions
+@using Ulearn.Common
+@using Ulearn.Common.Extensions
 
 @model UnitStatisticPageModel
 @{
