--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -1,5 +1,4 @@
-﻿@using Database.Extensions
-@using Database.Models
+﻿@using Database.Models
 @using uLearn
 @using uLearn.Quizes
 @using uLearn.Web.Extensions
