--- a/src/uLearn.Web/Views/Exercise/_SlideCodeReviewComments.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_SlideCodeReviewComments.cshtml
@@ -1,5 +1,5 @@
-﻿@using uLearn
-@using uLearn.Extensions
+﻿@using Ulearn.Common
+@using Ulearn.Common.Extensions
 
 @model List<Database.Models.ExerciseCodeReview>
 
