--- a/src/uLearn.Web/Views/Shared/Notifications.cshtml
+++ b/src/uLearn.Web/Views/Shared/Notifications.cshtml
@@ -1,12 +1,11 @@
 ﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
-
-@using System.Web.Mvc
 @using Database.Models
 @using uLearn
-@using uLearn.Extensions
 @using uLearn.Quizes
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Shared
+@using Ulearn.Common
+@using Ulearn.Common.Extensions
 
 @functions
 {
