ExtensionslessUrlHAndler for Courses
Prevent to showing 404 for course page with dot in name (i.e. /Course/Testing.Additional)

--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -239,7 +239,7 @@
 
 		@if (!Model.VisitedUsers.Any())
 		{
-			<div class="text-muted">Здесь пока никого не было...</div>
+			<div class="text-muted">Здесь пока никого не было.</div>
 		}
 
 		@foreach (var userInfo in Model.VisitedUsers)
