Change texts for users on exercise page (code review's status)
Added hunspell dlls for CourseTool and Ulearn.Web

--- a/src/uLearn.Web/Views/Quiz/Analytics.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Analytics.cshtml
@@ -120,7 +120,7 @@
 						{
 							if (Model.UsersWaitsForManualCheck.Contains(user))
 							{
-								<td class="manualQuizAnswer" data-sort-value="0" title="Ожидает проверки инструктором"></td>
+								<td class="manualQuizAnswer" data-sort-value="0" title="Ожидает проверки преподавателем"></td>
 							}
 							else
 							{
