--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -39,11 +39,11 @@
 	}
 	else if (Model.QuizState == QuizState.WaitForCheck)
 	{
-		status = "Ожидает проверки инструктором";
+		status = "Ожидает проверки преподавателем";
 	}
 	else if (Model.QuizState == QuizState.IsChecking)
 	{
-		status = "Проверяется инструктором";
+		status = "Проверяется преподавателем";
 	}
 
 	if (!string.IsNullOrEmpty(status))
