--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -42,11 +42,11 @@
 			var statusClass = "";
 			if (Model.ReviewState == ExerciseReviewState.WaitingForReview)
 			{
-				status = "Все тесты пройдены, код ожидает проверки преподавателем";
+				status = "Все тесты пройдены, решение ожидает код-ревью";
 				if (Model.InstructorView)
 				{
 					status = string.Format(
-						"Все тесты пройдены, код ожидает <a href=\"{0}\" title=\"Перейти к проверке\">проверки преподавателем</a>",
+						"Все тесты пройдены, решение ожидает <a href=\"{0}\" title=\"Перейти к код-ревью\">код-ревью</a>",
 						Url.Action("CheckExercise", "Admin", new { courseId = Model.CourseId, id = Model.SubmissionSelectedByUser.ManualCheckings.Last().Id })
 						);
 				}
@@ -54,16 +54,23 @@
 			else if (Model.ReviewState == ExerciseReviewState.Reviewed)
 			{
 				var score = Model.SubmissionSelectedByUser.ManualCheckings.Max(c => c.Score);
+				var scoreVerb = score.SelectPluralWordInRussian(new RussianPluralizationOptions
+				{
+					One = "получен",
+					Two = "получено",
+					Five = "получено"
+				});
 				var pluralizedScore = score.PluralizeInRussian(RussianPluralizationOptions.Score);
 				if (Model.InstructorView)
 				{
-					status = string.Format("Все тесты пройдены, код <a href=\"{0}\" title=\"Отредактировать код-ревью\">проверен преподавателем</a> ({1})",
+					status = string.Format("Все тесты пройдены, за&nbsp;<a href=\"{0}\" title=\"Отредактировать код-ревью\">код-ревью</a> {1} +{2}",
 						Url.Action("CheckExercise", "Admin", new { courseId = Model.CourseId, id = Model.SubmissionSelectedByUser.ManualCheckings.Last().Id, recheck = true }),
+						scoreVerb,
 						pluralizedScore);
 				}
 				else
 				{
-					status = string.Format("Все тесты пройдены, код проверен преподавателем ({0})", pluralizedScore);
+					status = string.Format("Все тесты пройдены, за&nbsp;код-ревью {0} +{1}", scoreVerb, pluralizedScore);
 				}
 			}
 			else if (Model.SubmissionSelectedByUser.AutomaticCheckingIsRightAnswer)
