--- a/src/uLearn.Web/Views/Certificates/List.cshtml
+++ b/src/uLearn.Web/Views/Certificates/List.cshtml
@@ -36,7 +36,7 @@
 	{
 		<div class="certificates-list__info">
 			<div>
-                Поделитесь ссылкой на&nbsp;эту страницу или отдельный сертификат с&&nbsp;друзьями. Это поможет другим людям находить курсы по&nbsp;программированию.
+                Поделитесь ссылкой на&nbsp;эту страницу или отдельный сертификат с&nbsp;друзьями. Это поможет другим людям находить курсы по&nbsp;программированию.
 			</div>
 			<div class="likely">
 				<div class="vkontakte">Поделиться</div>
